--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,10 @@ body{
 
 .app{
     display: flex;
+    height: 100vh;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px;
+    border: 1px solid red;
 }
